change the name of section

--- a/sections/vuba-richtext.liquid
+++ b/sections/vuba-richtext.liquid
@@ -21,7 +21,7 @@
   
   {% schema %}
   {
-    "name": "Rich Text Section",
+    "name": "Vuba Rich Text Section",
     "settings": [
       {
         "type": "color",
@@ -111,7 +111,7 @@
     ],
     "presets": [
       {
-        "name": "Rich Text Section",
+        "name": "Vuba Rich Text Section",
         "category": "Custom"
       }
     ]
