--- a/sections/vuba-richtext.liquid
+++ b/sections/vuba-richtext.liquid
@@ -42,7 +42,8 @@
           {
             "type": "text",
             "id": "title",
-            "label": "Title"
+            "label": "Title",
+            "default": "Rich Text Title"
           },
           {
             "type": "select",
