update vuba richtext section

--- a/sections/vuba-richtext.liquid
+++ b/sections/vuba-richtext.liquid
@@ -196,7 +196,18 @@
   "presets": [
     {
       "name": "Vuba Rich Text Section",
-      "category": "Custom"
+      "category": "Custom",
+      "blocks": [
+        {
+          "type": "title"
+        },
+        {
+          "type": "inline_richtext"
+        },
+        {
+          "type": "button"
+        }
+      ]
     }
   ]
 }
