--- a/sections/vuba-richtext.liquid
+++ b/sections/vuba-richtext.liquid
@@ -1,13 +1,15 @@
 <section class="py-12 {% if section.settings.background_color %}bg-{{ section.settings.background_color }}{% endif %} {% if section.settings.background_image != blank %}bg-cover bg-center{% endif %}" {% if section.settings.background_image != blank %}style="background-image: url('{{ section.settings.background_image | image_url }}');"{% endif %}>
   <div class="container mx-auto px-4">
+    <div class="text-center">
+      <h2 class="text-{{ section.settings.title_size }} text-{{ section.settings.alignment }}">{{ section.settings.title }}</h2>
+      <div class="text-{{ section.settings.alignment }}">
+        {{ section.settings.richtext }}
+      </div>
+    </div>
+  </div>
+  <div class="container mx-auto px-4">
     {% for block in section.blocks %}
       <div class="mb-8 text-{{ block.settings.alignment }}">
-        {% if block.type == 'title' %}
-          <h2 class="text-{{ block.settings.title_size }} font-bold mb-4">{{ block.settings.title }}</h2>
-        {% endif %}
-        {% if block.type == 'inline_richtext' %}
-          <div class="prose mb-4">{{ block.settings.richtext }}</div>
-        {% endif %}
         {% if block.type == 'button' %}
           <a href="{{ block.settings.button_link }}" class="inline-block bg-blue-500 text-white py-2 px-4 rounded">{{ block.settings.button_text }}</a>
         {% endif %}
@@ -32,41 +34,35 @@
       "type": "image_picker",
       "id": "background_image",
       "label": "Background Image"
-    }
-  ],
-  "blocks": [
+    },
     {
-      "type": "title",
-      "name": "Title",
-      "settings": [
-        {
           "type": "text",
           "id": "title",
           "label": "Title",
           "default": "Rich Text Title"
         },
         {
-          "type": "select",
-          "id": "title_size",
-          "label": "Title Size",
-          "options": [
-            {
-              "value": "text-4xl",
-              "label": "Extra Large"
-            },
-            {
-              "value": "text-3xl",
-              "label": "Large"
-            },
-            {
-              "value": "text-2xl",
-              "label": "Medium"
-            },
-            {
-              "value": "text-xl",
-              "label": "Small"
-            }
-          ],
+        "type": "select",
+        "id": "title_size",
+        "label": "Title Size",
+        "options": [
+          {
+            "value": "text-4xl",
+            "label": "Extra Large"
+          },
+          {
+            "value": "text-3xl",
+            "label": "Large"
+          },
+          {
+            "value": "text-2xl",
+            "label": "Medium"
+          },
+          {
+            "value": "text-xl",
+            "label": "Small"
+          }
+        ],
           "default": "text-4xl"
         },
         {
@@ -87,42 +83,36 @@
               "label": "Right"
             }
           ],
-          "default": "left"
-        }
-      ]
-    },
-    {
-      "type": "inline_richtext",
-      "name": "Inline Rich Text",
-      "settings": [
-        {
-          "type": "richtext",
-          "id": "richtext",
-          "label": "Rich Text",
-          "default": "<p>This is some rich text content.</p>"
+          "default": "center"
         },
         {
-          "type": "select",
-          "id": "alignment",
-          "label": "Alignment",
-          "options": [
-            {
-              "value": "left",
-              "label": "Left"
-            },
-            {
-              "value": "center",
-              "label": "Center"
-            },
-            {
-              "value": "right",
-              "label": "Right"
-            }
-          ],
-          "default": "left"
-        }
-      ]
+      "type": "richtext",
+      "id": "richtext",
+      "label": "Rich Text",
+      "default": "<p>This is some rich text content.</p>"
     },
+    {
+      "type": "select",
+      "id": "alignment",
+      "label": "Alignment",
+      "options": [
+        {
+          "value": "left",
+          "label": "Left"
+        },
+        {
+          "value": "center",
+          "label": "Center"
+        },
+        {
+          "value": "right",
+          "label": "Right"
+        }
+      ],
+      "default": "center"
+    }
+  ],
+  "blocks": [
     {
       "type": "button",
       "name": "Button",
@@ -131,7 +121,7 @@
           "type": "text",
           "id": "button_text",
           "label": "Button Text",
-          "default": "Click Me"
+          "default": "Button"
         },
         {
           "type": "url",
@@ -157,7 +147,7 @@
               "label": "Right"
             }
           ],
-          "default": "left"
+          "default": "center"
         }
       ]
     },
@@ -188,7 +178,7 @@
               "label": "Right"
             }
           ],
-          "default": "left"
+          "default": "center"
         }
       ]
     }
