Updated Vuba Installer
change the default text of description for Vuba installers

--- a/sections/Vuba-Installers.liquid
+++ b/sections/Vuba-Installers.liquid
@@ -45,7 +45,7 @@
           "type": "textarea",
           "id": "description",
           "label": "Description",
-          "default": "Approved installers are loyal Vuba customers, able to claim a range of free marketing materials, gaining priority with qualified leads and receiving access to a dedicated Account Manager."
+          "default": "Approved installers are loyal Vuba customers"
         },
         {
           "type": "url",
