updated vuba multi-column section
changing the name

--- a/sections/vuba-multicolumn.liquid
+++ b/sections/vuba-multicolumn.liquid
@@ -37,7 +37,7 @@
   
   {% schema %}
   {
-    "name": "Vuba Installers",
+    "name": "Vuba Multi Column",
     "settings": [
       {
         "type": "text",
