change the category name

--- a/sections/vuba-banner-image.liquid
+++ b/sections/vuba-banner-image.liquid
@@ -63,7 +63,7 @@
   "presets": [
     {
       "name": "Vuba Banner Image",
-      "category": "Custom"
+      "category": "Vuba Banner Image"
     }
   ]
 }
