--- a/sections/vuba-banner-image.liquid
+++ b/sections/vuba-banner-image.liquid
@@ -56,8 +56,7 @@
     {
       "type": "url",
       "id": "button_link",
-      "label": "Button Link",
-      "default": "#"
+      "label": "Button Link"
     }
   ],
   "presets": [
