--- a/sections/vuba-banner-image.liquid
+++ b/sections/vuba-banner-image.liquid
@@ -5,6 +5,7 @@
   <div class="container mx-auto relative z-10 py-12 px-4">
     <div class="bg-maroon-800 p-6 rounded-lg text-white max-w-md">
       {% if section.settings.logo != blank %}
+        {{ section.settings.background_image }}
         <img src="{{ section.settings.logo | image_url: width: 200 }}" alt="{{ section.settings.logo.alt | default: shop.name }}" class="h-12 mb-4">
       {% endif %}
       {% if section.settings.title != blank %}
