Adding default blocks in multi column section

--- a/sections/vuba-multicolumn.liquid
+++ b/sections/vuba-multicolumn.liquid
@@ -85,7 +85,21 @@
     "presets": [
       {
         "name": "Vuba MultiColumn",
-        "category": "Vuba MultiColumn"
+        "category": "Vuba MultiColumn",
+        "blocks": [
+          {
+            "type": "installer_block"
+          },
+          {
+            "type": "installer_block"
+          },
+          {
+            "type": "installer_block"
+          },
+          {
+            "type": "installer_block"
+          }
+        ]
       }
     ]
   }
