--- a/sections/vuba-header.liquid
+++ b/sections/vuba-header.liquid
@@ -15,11 +15,7 @@
 
   <div class="search flex items-center">
     <input type="text" class="p-2 rounded-l-md border-none">
-    <button type="submit" class="bg-white p-2 rounded-r-md">
-      <span class="svg-wrapper">
-        {{- 'icon-search.svg' | inline_asset_content -}}
-      </span>
-    </button>
+    {% render 'header-search' %}
   </div>
 
   <nav>
