--- a/sections/vuba-header.liquid
+++ b/sections/vuba-header.liquid
@@ -14,7 +14,7 @@
   </div>
 
   <div class="search flex items-center">
-    {% render 'header-search' %}
+    {% render 'header-search', input_id: 'header-search-input' %}
   </div>
 
   <nav>
