--- a/sections/vuba-footer.liquid
+++ b/sections/vuba-footer.liquid
@@ -11,7 +11,7 @@
       <div class="col w-full md:w-[45%] lg:w-auto">
         <h3 class="text-2xl font-semibold mb-5">Site map</h3>
         <ul class="space-y-3 text-base">
-          {% for link in linklists[settings.sitemap_menu].links %}
+          {% for link in linklists[settings.vuba_menu].links %}
             <li><a href="{{ link.url }}" class="hover:text-primary">{{ link.title }}</a></li>
           {% endfor %}
         </ul>
@@ -68,8 +68,8 @@
   "settings": [
     {
       "type": "link_list",
-      "id": "sitemap_menu",
-      "label": "Sitemap Menu",
+      "id": "vuba_menu",
+      "label": "Vuba Menu",
       "default": "footer-menu"
     }
   ],
