--- a/sections/vuba-footer.liquid
+++ b/sections/vuba-footer.liquid
@@ -2,57 +2,49 @@
 <footer class="bg-gray-800 pt-24 pb-14 text-center md:text-start text-white">
   <div class="container mx-auto">
     <div class="flex flex-wrap justify-between gap-8 lg:gap-6">
-      <div class="col w-full 2xl:w-auto">
-        <a href="#" class="inline-block mb-5">
-          <img src="{{ 'footer-logo-d.svg' | asset_url }}" class="hidden md:block" alt="Vuba Stone Logo Desktop"/>
-          <img src="{{ 'footer-logo-m.svg' | asset_url }}" class="md:hidden" alt="Vuba Stone Logo Mobile"/>
-        </a>
-      </div>
-      <div class="col w-full md:w-[45%] lg:w-auto">
-        <h3 class="text-2xl font-semibold mb-5">Site map</h3>
-        <ul class="space-y-3 text-base">
-            {%- for link in section.settings.menu.links -%}
-                <li>
-                    {%- if link != blank -%}    
-                        <a href="{{ link.url }}" class="hover:text-primary">{{ link.title }}</a>
-                    {% endif %}
-                </li>
-          {% endfor %}
-        </ul>
-      </div>
-      <div class="col w-full md:w-[45%] lg:w-auto">
-        <h3 class="text-2xl font-semibold mb-5">Distributor HQ</h3>
-        <p class="text-base leading-7">
-          Distributor HQ<br> 
-          Sierra Stone / Rubber Stone <br>
-          E.W. Industries Ltd.<br>
-          P.O Box 336 <br>
-          Imperial, Saskatchewan S0G 2J0 <br>
-          <a href="tel:1-888-799-3960" class="text-primary underline">1-888-799-3960</a>
-        </p>
-      </div>
-      <div class="col w-full md:w-[45%] lg:w-auto">
-        <h3 class="text-2xl font-semibold mb-5">UK Manufacturer</h3>
-        <p class="text-base leading-7">
-          Vuba Chemical Innovations Ltd <br>
-          Units B2-B4, Grovehill Industrial Estate <br>
-          Annie Reed Road, Beverley <br>
-          HU17 0LE <br>
-          <a href="mailto:sales@vubagroup.com" class="underline text-primary">sales@vubagroup.com</a><br>
-          <a href="tel:01482-778897" class="underline text-primary">01482 778897</a>
-        </p>
-      </div>
-      <div class="col w-full md:w-[45%] lg:w-auto">
-        <h3 class="text-2xl font-semibold mb-5">Let’s stay connected</h3>
-        <div class="flex justify-center md:justify-normal space-x-8 mb-6">
-          <a href="#"><img class="h-[23px]" src="{{ 'instagram-icon.svg' | asset_url }}" alt="instagram-icon"/></a>
-          <a href="#"><img class="h-[23px]" src="{{ 'facebook-icon.svg' | asset_url }}" alt="facebook-icon"/></a>
-          <a href="#"><img class="h-[23px]" src="{{ 'twitter-icon.svg' | asset_url }}" alt="twitter-icon"/></a>
-        </div>
-        <label for="email" class="block text-base">Email</label>
-        <input type="email" id="email" class="w-full my-3 border rounded-xl p-2 text-sm h-12">
-        <a class="mt-2 text-white px-14 py-3 inline-block rounded-full text-base bg-primary">Sign up</a>
-      </div>
+      {% for block in section.blocks %}
+        {% if block.type == 'logo' %}
+          <div class="col w-full 2xl:w-auto">
+            <a href="{{ block.settings.logo_link }}" class="inline-block mb-5">
+              <img src="{{ block.settings.logo_desktop | asset_url }}" class="hidden md:block" alt="Vuba Stone Logo Desktop"/>
+              <img src="{{ block.settings.logo_mobile | asset_url }}" class="md:hidden" alt="Vuba Stone Logo Mobile"/>
+            </a>
+          </div>
+        {% elsif block.type == 'menu' %}
+          <div class="col w-full md:w-[45%] lg:w-auto">
+            <h3 class="text-2xl font-semibold mb-5">{{ block.settings.menu_heading }}</h3>
+            <ul class="space-y-3 text-base">
+              {% for link in linklists[block.settings.menu].links %}
+                <li><a href="{{ link.url }}" class="hover:text-primary">{{ link.title }}</a></li>
+              {% endfor %}
+            </ul>
+          </div>
+        {% elsif block.type == 'address' %}
+          <div class="col w-full md:w-[45%] lg:w-auto">
+            <h3 class="text-2xl font-semibold mb-5">{{ block.settings.address_heading }}</h3>
+            <p class="text-base leading-7">
+              {{ block.settings.address_name }}<br> 
+              {{ block.settings.address_line1 }}<br>
+              {{ block.settings.address_line2 }}<br>
+              {{ block.settings.address_city }}<br>
+              {{ block.settings.address_postcode }}<br>
+              <a href="tel:{{ block.settings.address_phone }}" class="text-primary underline">{{ block.settings.address_phone }}</a>
+            </p>
+          </div>
+        {% elsif block.type == 'social_media' %}
+          <div class="col w-full md:w-[45%] lg:w-auto">
+            <h3 class="text-2xl font-semibold mb-5">{{ block.settings.social_heading }}</h3>
+            <div class="flex justify-center md:justify-normal space-x-8 mb-6">
+              <a href="{{ block.settings.instagram_link }}"><img class="h-[23px]" src="{{ 'instagram-icon.svg' | asset_url }}" alt="instagram-icon"/></a>
+              <a href="{{ block.settings.facebook_link }}"><img class="h-[23px]" src="{{ 'facebook-icon.svg' | asset_url }}" alt="facebook-icon"/></a>
+              <a href="{{ block.settings.twitter_link }}"><img class="h-[23px]" src="{{ 'twitter-icon.svg' | asset_url }}" alt="twitter-icon"/></a>
+            </div>
+            <label for="email" class="block text-base">Email</label>
+            <input type="email" id="email" class="w-full my-3 border rounded-xl p-2 text-sm h-12">
+            <a class="mt-2 text-white px-14 py-3 inline-block rounded-full text-base bg-primary">Sign up</a>
+          </div>
+        {% endif %}
+      {% endfor %}
     </div>
     <div class="pt-10 md:hidden">
       <ul class="space-y-2 text-base mb-5">
@@ -69,12 +61,122 @@
 {% schema %}
 {
   "name": "Footer",
-  "settings": [
+  "settings": [],
+  "blocks": [
     {
-      "type": "link_list",
-      "id": "menu",
-      "label": "Vuba Menu",
-      "default": "main-menu"
+      "type": "logo",
+      "name": "Logo",
+      "settings": [
+        {
+          "type": "url",
+          "id": "logo_link",
+          "label": "Logo Link",
+          "default": "/"
+        },
+        {
+          "type": "image_picker",
+          "id": "logo_desktop",
+          "label": "Logo Desktop"
+        },
+        {
+          "type": "image_picker",
+          "id": "logo_mobile",
+          "label": "Logo Mobile"
+        }
+      ]
+    },
+    {
+      "type": "menu",
+      "name": "Menu",
+      "settings": [
+        {
+          "type": "text",
+          "id": "menu_heading",
+          "label": "Menu Heading",
+          "default": "Site map"
+        },
+        {
+          "type": "link_list",
+          "id": "menu",
+          "label": "Menu",
+          "default": "footer-menu"
+        }
+      ]
+    },
+    {
+      "type": "address",
+      "name": "Address",
+      "settings": [
+        {
+          "type": "text",
+          "id": "address_heading",
+          "label": "Address Heading",
+          "default": "Distributor HQ"
+        },
+        {
+          "type": "text",
+          "id": "address_name",
+          "label": "Address Name",
+          "default": "Distributor HQ"
+        },
+        {
+          "type": "text",
+          "id": "address_line1",
+          "label": "Address Line 1",
+          "default": "Sierra Stone / Rubber Stone"
+        },
+        {
+          "type": "text",
+          "id": "address_line2",
+          "label": "Address Line 2",
+          "default": "E.W. Industries Ltd."
+        },
+        {
+          "type": "text",
+          "id": "address_city",
+          "label": "Address City",
+          "default": "Imperial, Saskatchewan"
+        },
+        {
+          "type": "text",
+          "id": "address_postcode",
+          "label": "Address Postcode",
+          "default": "S0G 2J0"
+        },
+        {
+          "type": "text",
+          "id": "address_phone",
+          "label": "Address Phone",
+          "default": "1-888-799-3960"
+        }
+      ]
+    },
+    {
+      "type": "social_media",
+      "name": "Social Media",
+      "settings": [
+        {
+          "type": "text",
+          "id": "social_heading",
+          "label": "Social Heading",
+          "default": "Let’s stay connected"
+        },
+        {
+          "type": "url",
+          "id": "instagram_link",
+          "label": "Instagram Link"
+        },
+        {
+          "type": "url",
+          "id": "facebook_link",
+          "label": "Facebook Link"
+        },
+        {
+          "type": "url",
+          "id": "twitter_link",
+          "label": "Twitter Link"
+        }
+      ]
     }
   ],
   "presets": [
