change footer menu

--- a/sections/vuba-footer.liquid
+++ b/sections/vuba-footer.liquid
@@ -99,7 +99,7 @@
           "type": "link_list",
           "id": "menu",
           "label": "Menu",
-          "default": "footer-menu"
+          "default": "main-menu"
         }
       ]
     },
