--- a/sections/vuba-footer.liquid
+++ b/sections/vuba-footer.liquid
@@ -179,10 +179,24 @@
       ]
     }
   ],
-  "presets": [
-    {
-      "name": "Vuba Footer"
-    }
-  ]
+    "presets": [
+        {
+        "name": "Vuba Footer",
+        "blocks": [
+            {
+            "type": "logo"
+            },
+            {
+            "type": "menu"
+            },
+            {
+            "type": "address"
+            },
+            {
+            "type": "social_media"
+            }
+        ]
+        }
+    ]
 }
 {% endschema %}
