--- a/sections/vuba-footer.liquid
+++ b/sections/vuba-footer.liquid
@@ -35,9 +35,9 @@
           <div class="col w-full md:w-[45%] lg:w-auto">
             <h3 class="text-2xl font-semibold mb-5">{{ block.settings.social_heading }}</h3>
             <div class="flex justify-center md:justify-normal space-x-8 mb-6">
-              <a href="{{ block.settings.instagram_link }}"><img class="h-[23px]" src="{{ 'instagram-icon.svg' | asset_url }}" alt="instagram-icon"/></a>
-              <a href="{{ block.settings.facebook_link }}"><img class="h-[23px]" src="{{ 'facebook-icon.svg' | asset_url }}" alt="facebook-icon"/></a>
-              <a href="{{ block.settings.twitter_link }}"><img class="h-[23px]" src="{{ 'twitter-icon.svg' | asset_url }}" alt="twitter-icon"/></a>
+              <a href="{{ block.settings.instagram_link }}"><img class="h-[23px]" src="{{ 'icon-instagram.svg' | asset_url }}" alt="instagram-icon"/></a>
+              <a href="{{ block.settings.facebook_link }}"><img class="h-[23px]" src="{{ 'icon-facebook.svg' | asset_url }}" alt="facebook-icon"/></a>
+              <a href="{{ block.settings.twitter_link }}"><img class="h-[23px]" src="{{ 'icon-twitter.svg' | asset_url }}" alt="twitter-icon"/></a>
             </div>
             <label for="email" class="block text-base">Email</label>
             <input type="email" id="email" class="w-full my-3 border rounded-xl p-2 text-sm h-12">
