update the vuba-mac-section-one

--- a/sections/vuba-mac-section-one.liquid
+++ b/sections/vuba-mac-section-one.liquid
@@ -43,14 +43,12 @@
     {
       "type": "image_picker",
       "id": "desktop_image",
-      "label": "Desktop Image",
-      "default": "images/VubaMacAggregate.png"
+      "label": "Desktop Image"
     },
     {
       "type": "image_picker",
       "id": "mobile_image",
-      "label": "Mobile Image",
-      "default": "images/placeholder-product.png"
+      "label": "Mobile Image"
     }
   ],
   "presets": [
