--- a/sections/vuba-mac-section-one.liquid
+++ b/sections/vuba-mac-section-one.liquid
@@ -12,7 +12,7 @@
             </p>
         </div>
         <div class="text-center pt-9 md:pt-20">
-            <img class="hidden md:block mx-auto" src="{{ section.settings.desktop_image | file_url }}" alt="VubaMacAggregate"/>
+            <img class="hidden md:block mx-auto" src="{{ section.settings.desktop_image | img_url:'medium' }}" alt="VubaMacAggregate"/>
             <img class="md:hidden mx-auto" src="{{ section.settings.mobile_image | file_url }}" alt="placeholder product"/>
         </div>
     </div>
