--- a/sections/vuba-latest-project.liquid
+++ b/sections/vuba-latest-project.liquid
@@ -31,7 +31,7 @@
 
 {% schema %}
 {
-    "name": "Latest Projects",
+    "name": "Vuba Latest Projects",
     "settings": [
         {
             "type": "text",
@@ -47,7 +47,7 @@
     ],
     "presets": [
         {
-            "name": "Latest Projects",
+            "name": "Vuba Latest Projects",
             "category": "Sections"
         }
     ]
