--- a/sections/vuba-epoxy-stone.liquid
+++ b/sections/vuba-epoxy-stone.liquid
@@ -132,8 +132,7 @@
         {
           "type": "url",
           "id": "button_link",
-          "label": "Button Link",
-          "default": "#"
+          "label": "Button Link"
         }
       ],
       "presets": [
