--- a/assets/style.css
+++ b/assets/style.css
@@ -5,164 +5,164 @@
 @tailwind utilities;
 
 :root {
-  font-size: 16px;
+    font-size: 16px;
 }
-.predictive-search {
-  display: none;
+.predictive-search { 
+    display: none;
 }
-.owl-carousel .owl-stage {
-  display: flex;
+.owl-carousel .owl-stage{
+    display: flex;
 }
-.vuba-stone-update .owl-theme .owl-nav.disabled + .owl-dots {
-  margin-top: 25px;
+.vuba-stone-update .owl-theme .owl-nav.disabled+.owl-dots {
+    margin-top: 25px;
 }
 
 .vuba-stone-update .owl-carousel button.owl-dot span {
-  background: #fff;
-  margin: 0;
-  width: 100%;
-  height: 3px;
+    background: #fff;
+    margin: 0;
+    width: 100%;
+    height: 3px;
 }
 .vuba-stone-update .owl-carousel button.owl-dot {
-  width: 20%;
-  margin: 0 10px;
+    width: 20%;
+    margin: 0 10px;
 }
-.vuba-stone-update .owl-carousel button.owl-dot.active span,
+.vuba-stone-update .owl-carousel button.owl-dot.active span, 
 .vuba-stone-update .owl-carousel button.owl-dot:hover span {
-  background: #821832;
+    background: #821832;
 }
 
 .padding-right-zeero {
-  padding-left: calc((100% - 1400px) / 2);
+    padding-left: calc((100% - 1400px) / 2);
 }
-.inner-container {
-  margin-left: auto;
-  margin-right: auto;
-  padding-left: 16px;
-  padding-right: 16px;
-  max-width: 1432px;
-  width: 100%;
+.inner-container{
+    margin-left: auto;
+    margin-right: auto;
+    padding-left: 16px;
+    padding-right: 16px;
+    max-width: 1432px;
+    width: 100%;
 }
 .latest-project .item {
-  width: 640px;
-  margin-right: 40px;
+    width: 640px;
+    margin-right: 40px;
 }
 
 .latest-project .owl-carousel button.owl-dot {
-  max-width: 300px;
-  min-width: 365px;
-  height: 3px;
-  background-color: #b9b9b9;
-  border: 1px solid #b9b9b9;
-  border-radius: 2px;
+    max-width: 300px;
+    min-width: 365px;
+    height: 3px;
+    background-color: #B9B9B9;
+    border: 1px solid #B9B9B9;
+    border-radius: 2px;
 }
 .latest-project .owl-carousel .owl-dots:not(.disabled) {
-  display: flex;
-  gap: 10px;
-  padding-top: 40px;
+    display: flex;
+    gap: 10px;
+    padding-top: 40px;
 }
 .latest-project .owl-carousel button.owl-dot.active {
-  background: #821732;
-  border-color: #821732;
+    background: #821732;
+    border-color: #821732;
 }
 
-@media screen and (max-width: 1799px) {
-  .padding-right-zeero {
-    padding-left: calc((100% - 1080px) / 2);
-  }
-  .inner-container {
-    max-width: 1112px;
-  }
+@media screen and (max-width:1799px) {
+    .padding-right-zeero {
+        padding-left: calc((100% - 1080px) / 2);
+    }
+    .inner-container{
+        max-width: 1112px;
+    }
 
-  .latest-project .item {
-    width: 480px;
-    margin-right: 30px;
-  }
+    .latest-project .item {
+        width: 480px;
+        margin-right: 30px;
+    }
 }
 
-@media screen and (max-width: 1399px) {
-  .padding-right-zeero {
-    padding-left: calc((100% - 890px) / 2);
-  }
-  .inner-container {
-    max-width: 922px;
-  }
-  .latest-project .item {
-    width: 390px;
-  }
+@media screen and (max-width:1399px) {
+    .padding-right-zeero {
+        padding-left: calc((100% - 890px) / 2);
+    }
+    .inner-container{
+        max-width: 922px;
+    }
+    .latest-project .item {
+        width: 390px;
+    }
 }
 
-@media screen and (max-width: 1199px) {
-  .padding-right-zeero {
-    padding-left: calc((100% - 860px) / 2);
-  }
-  .inner-container {
-    max-width: 992px;
-  }
-  .latest-project .item {
-    width: 340px;
-  }
+@media screen and (max-width:1199px) {
+    .padding-right-zeero {
+        padding-left: calc((100% - 860px) / 2);
+    }
+    .inner-container{
+        max-width: 992px;
+    }
+    .latest-project .item {
+        width: 340px;
+    }
 }
 
-@media screen and (max-width: 991px) {
-  .padding-right-zeero {
-    padding-left: calc((100% - 650px) / 2);
-  }
-  .inner-container {
-    max-width: 682px;
-  }
-  .latest-project .item {
-    width: 300px;
-  }
+@media screen and (max-width:991px) {
+    .padding-right-zeero {
+        padding-left: calc((100% - 650px) / 2);
+    }
+    .inner-container{
+        max-width: 682px;
+    }
+    .latest-project .item {
+        width: 300px;
+    }
 }
 
-@media screen and (max-width: 767px) {
-  .vuba-stone-update .owl-carousel button.owl-dot span {
-    width: 10px;
-    height: 10px;
-  }
-  .vuba-stone-update .owl-carousel button.owl-dot {
-    width: auto;
-    margin: 0 5px;
-  }
+@media screen and (max-width:767px) {
+    .vuba-stone-update .owl-carousel button.owl-dot span {
+        width: 10px;
+        height: 10px;
+    }
+    .vuba-stone-update .owl-carousel button.owl-dot {
+        width: auto;
+        margin: 0 5px;
+    }
 
-  .padding-right-zeero {
-    padding-left: calc((100% - 470px) / 2);
-  }
-  .inner-container {
-    max-width: 502px;
-  }
-  .latest-project .item {
-    width: 350px;
-    margin-right: 25px;
-  }
-  .latest-project .bg-gradient:before {
-    background: linear-gradient(to top, rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0));
-  }
-  .latest-project .owl-carousel .owl-dots {
-    padding-top: 40px;
-    justify-content: center;
-  }
-  .latest-project .owl-carousel button.owl-dot {
-    max-width: none;
-    min-width: revert;
-    width: 10px;
-    height: 10px;
-    background-color: transparent;
-    border: 1px solid #000;
-    border-radius: 50%;
-  }
+    .padding-right-zeero {
+        padding-left: calc((100% - 470px) / 2);
+    }
+    .inner-container{
+        max-width: 502px;
+    }
+    .latest-project .item {
+        width: 350px;
+        margin-right: 25px;
+    }
+    .latest-project .bg-gradient:before {
+        background: linear-gradient(to top, rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0));
+    }
+    .latest-project .owl-carousel .owl-dots {
+        padding-top: 40px;
+        justify-content: center;
+    }
+    .latest-project .owl-carousel button.owl-dot {
+        max-width:none;
+        min-width: revert;
+        width: 10px;
+        height: 10px;
+        background-color: transparent;
+        border: 1px solid #000;
+        border-radius: 50%;
+    }
 }
 
-@media screen and (max-width: 575px) {
-  .padding-right-zeero {
-    padding-left: 16px;
-  }
-  .latest-project .item {
-    width: 290px;
-    margin-right: 20px;
-  }
-  .inner-container {
-    max-width: 100%;
-  }
+@media screen and (max-width:575px) {
+    .padding-right-zeero {
+        padding-left:16px;
+    }
+    .latest-project .item {
+        width: 290px;
+        margin-right: 20px;
+    }
+    .inner-container{
+        max-width: 100%;
+    }
 }
