--- a/sections/vuba-world-blends.liquid
+++ b/sections/vuba-world-blends.liquid
@@ -1,6 +1,20 @@
-{% schema %}
-  {
-    "name": "Section name",
-    "settings": []
-  }
-{% endschema %}
+<section class="vuba-world-bleds pt-0 pb-14 md:pb-16 3xl:pb-28 overflow-hidden">
+    <div class="padding-right-zeero">
+        <h2 class="text-secondary text-center md:text-start text-4xl 2xl:text-5xl 3xl:text-[148px] font-bold mb-10 md:mb-10 leading-[1.1] 3xl:mb-20">Vuba World Blends</h2>
+        <div class="owl-carousel vuba-world-bleds-slider">
+            {% for product in collections['your-collection-handle'].products %}
+            <div class="item bg-gray rounded-2xl py-12 px-10 text-center">
+                <div class="w-40 3xl:w-80 h-40 3xl:h-80 mx-auto rounded-full overflow-hidden mb-7">
+                    <img src="{{ product.featured_image | img_url: '400x400' }}" alt="{{ product.title }}" class="w-full h-full object-cover">
+                </div>
+                <span class="text-sm 2xl:text-lg text-primary mt-2">{{ product.options[0] }}</span>
+                <h3 class="text-3xl font-medium my-3">{{ product.title }}</h3>
+                <a href="{{ product.url }}" class="text-xl inline-block font-medium underline hover:text-primary">View product</a>
+            </div>
+            {% endfor %}
+        </div>
+    </div>
+    <div class="text-center mt-10 xl:mt-6 3xl:mt-20 container">
+        <a href="/collections/your-collection-handle" class="text-primary text-sm xl:text-lg 3xl:text-2xl underline">See the full range here</a>
+    </div>
+</section>
