--- a/sections/vuba-multicolumn-installer.liquid
+++ b/sections/vuba-multicolumn-installer.liquid
@@ -76,8 +76,7 @@
         {
           "type": "url",
           "id": "link",
-          "label": "Button Link",
-          "default": "#"
+          "label": "Button Link"
         },
         {
           "type": "text",
