update contact us page

--- a/sections/vuba-contact.liquid
+++ b/sections/vuba-contact.liquid
@@ -76,20 +76,17 @@
     {
       "type": "image_picker",
       "id": "desktop_logo",
-      "label": "Desktop Logo",
-      "default": "shopify://shop_images/footer-logo-d.svg"
+      "label": "Desktop Logo"
     },
     {
       "type": "image_picker",
       "id": "mobile_logo",
-      "label": "Mobile Logo",
-      "default": "shopify://shop_images/footer-logo-m.svg"
+      "label": "Mobile Logo"
     },
     {
       "type": "image_picker",
       "id": "contact_image",
-      "label": "Right Side Image",
-      "default": "shopify://shop_images/contact-form.jpg"
+      "label": "Right Side Image"
     }
   ],
   "presets": [
