--- a/sections/vuba-contact.liquid
+++ b/sections/vuba-contact.liquid
@@ -41,7 +41,7 @@
 
 {% schema %}
 {
-  "name": "vuba Contact Us",
+  "name": "Vuba Contact Us",
   "settings": [
     {
       "type": "text",
@@ -91,7 +91,7 @@
   ],
   "presets": [
     {
-      "name": "vuba Contact Us",
+      "name": "Vuba Contact Us",
       "category": "Contact"
     }
   ]
