update vuba-collection-product-grid section

--- a/sections/vuba-collection-product-grid.liquid
+++ b/sections/vuba-collection-product-grid.liquid
@@ -43,8 +43,7 @@
         {
             "type": "collection",
             "id": "product_collection",
-            "label": "Product Collection",
-            "default": ""
+            "label": "Product Collection"
         }
         ],
         "presets": [
