--- a/sections/vuba-intro-multirow.liquid
+++ b/sections/vuba-intro-multirow.liquid
@@ -59,8 +59,7 @@
     {
       "type": "url",
       "id": "video_url",
-      "label": "Video URL",
-      "default": "https://www.youtube.com/embed/D0UnqGm_miA"
+      "label": "Video URL"
     },
     {
       "type": "text",
