UPDATE  vuba-multirow

--- a/sections/vuba-intro-multirow.liquid
+++ b/sections/vuba-intro-multirow.liquid
@@ -76,8 +76,7 @@
     {
       "type": "image_picker",
       "id": "image_url",
-      "label": "Image",
-      "default": "images/air-source-heat-pump.png"
+      "label": "Image"
     },
     {
       "type": "text",
