UPDATE  vuba-multirow

--- a/sections/vuba-intro-multirow.liquid
+++ b/sections/vuba-intro-multirow.liquid
@@ -31,7 +31,7 @@
           </div>
           <div class="column w-[100%] md:w-[54%]">
             <figure class="relative w-full rounded-2xl overflow-hidden">
-              <img src="{{ section.settings.image_url }}" class="w-[100%]" alt="{{ section.settings.image_alt }}">
+              <img src="{{ section.settings.image_url }}" class="w-[100%]" alt="Air Source Heat Pump">
             </figure>
           </div>
         </div>
@@ -77,12 +77,6 @@
       "type": "image_picker",
       "id": "image_url",
       "label": "Image"
-    },
-    {
-      "type": "text",
-      "id": "image_alt",
-      "label": "Image Alt Text",
-      "default": "Air Source Heat Pump"
     }
   ]
 }
