--- a/sections/vuba-mac-download.liquid
+++ b/sections/vuba-mac-download.liquid
@@ -23,40 +23,25 @@
               }} 
           {% endif %}
           <div class="download-block flex flex-col gap-[13px]">
-            <div class="box-block border-[3px] border-secondary px-[30px] py-[25px] md:px-[20px] md:py-[18px] 3xl:px-[26px] 3xl:py-[23px]  rounded-[19px] bg-white flex items-center gap-[20px] 3xl:gap-[30px]">
-              <figure><img
-                  src="images/doc-icon.svg"
-                  alt="doc"
-                  class="max-w-[41px] 3xl:max-w-[50px]"></figure>
+          {% for block in section.blocks %}
+            <div class="box-block border-[3px] border-secondary px-[30px] py-[25px] md:px-[20px] md:py-[18px] 3xl:px-[26px] 3xl:py-[23px] rounded-[19px] bg-white flex items-center gap-[20px] 3xl:gap-[30px]">
+              <figure>
+                <img
+                  src="{{ block.settings.icon | img_url: 'master' }}"
+                  alt="Document Icon"
+                  class="max-w-[41px] 3xl:max-w-[50px]">
+              </figure>
               <div class="content">
-                <h3 class="font-medium lg:font-semibold font-poppins text-[18px] text-secondary block">Heavy Vehicle</h3>
-                <a href="#" class="font-medium underline mt-4 3xl:mt-[24px] font-poppins text-[12px]">Download
+                <h3 class="font-medium lg:font-semibold font-poppins text-[18px] text-secondary block">
+                  {{ block.settings.title }}
+                </h3>
+                <a href="{{ block.settings.link }}" class="font-medium underline mt-4 3xl:mt-[24px] font-poppins text-[12px]">
+                  Download
                 </a>
               </div>
             </div>
-            <div class="box-block border-[3px] border-secondary px-[30px] py-[25px] md:px-[20px] md:py-[18px] 3xl:px-[26px] 3xl:py-[23px]  rounded-[19px] bg-white flex items-center gap-[20px] 3xl:gap-[30px]">
-              <figure><img
-                  src="images/doc-icon.svg"
-                  alt="doc"
-                  class="max-w-[41px] 3xl:max-w-[50px]"></figure>
-              <div class="content">
-                <h3 class="font-medium lg:font-semibold font-poppins text-[18px] text-secondary block">Heavy Vehicle</h3>
-                <a href="#" class="font-medium underline mt-4 3xl:mt-[24px] font-poppins text-[12px]">Download
-                </a>
-              </div>
-            </div>
-            <div class="box-block border-[3px] border-secondary px-[30px] py-[25px] md:px-[20px] md:py-[18px] 3xl:px-[26px] 3xl:py-[23px]  rounded-[19px] bg-white flex items-center gap-[20px] 3xl:gap-[30px]">
-              <figure><img
-                  src="images/doc-icon.svg"
-                  alt="doc"
-                  class="max-w-[41px] 3xl:max-w-[50px]"></figure>
-              <div class="content">
-                <h3 class="font-medium lg:font-semibold font-poppins text-[18px] text-secondary block">Heavy Vehicle</h3>
-                <a href="#" class="font-medium underline mt-4 3xl:mt-[24px] font-poppins text-[12px]">Download
-                </a>
-              </div>
-            </div>
-          </div>
+          {% endfor %}
+        </div>
         </div>
       </div>
 
@@ -255,6 +240,30 @@
         "label": "Section Image"
       }
     ],
+    "blocks": [
+    {
+      "type": "download_item",
+      "name": "Download Item 1",
+      "settings": [
+        {
+          "type": "image_picker",
+          "id": "icon",
+          "label": "Icon"
+        },
+        {
+          "type": "text",
+          "id": "title",
+          "label": "Title",
+          "default": "Heavy Vehicle"
+        },
+        {
+          "type": "url",
+          "id": "link",
+          "label": "Download Link"
+        }
+      ]
+    }
+  ],
     "presets": [
       {
         "name": "Vuba Download Mac",
